--- a/index.html
+++ b/index.html
@@ -43,15 +43,19 @@
 </div>
 
 
-
+<br/><br/>
 <!-- ==== INICIO ==== -->
 <div id="headerwrap" name="inicio">
- 	<p>
-    </p>
-    <center><h1>Geek Desenvolvimento</h1>
+
+    <h1>Geek Desenvolvimento</h1>
+ 
+  <br/><br/>
   <p>Desde seu lançamento, GEEK foi sempre comprometida em fornecer os melhores serviços de qualidade hospedagem na web. Nossa contínua busca da excelência é o nosso foco principal e inabalável. Se você tem sido nosso cliente há anos, é um novo cliente, ou estão apenas nos avaliando, queremos assegurar-vos que os nossos clientes são a nossa prioridade.</p>
 
 </div>
+
+
+
 <!-- /Termino Inicio -->
 
 <!-- ==== SERVICES ==== -->
